@@ -1,3 +1,8 @@
+2001-05-01  Michael Meeks  <michael@ximian.com>
+
+	* Makefile.am: fixup corba dependencies more genericaly, add
+	cleanfiles.
+
 2001-05-02  Martin Baulig  <baulig@suse.de>
 
 	* Makefile.am: Added explicit dependency
